--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,9 @@ certifi==2022.6.15
 charset-normalizer==2.1.0
 Django==4.0.6
 idna==3.3
+pytz==2022.1
 requests==2.28.1
+schedule==1.1.0
 soupsieve==2.3.2.post1
 sqlparse==0.4.2
 urllib3==1.26.10
